--- a/ZuluShooping/ZuluShooping/Views/Countries/Create.cshtml
+++ b/ZuluShooping/ZuluShooping/Views/Countries/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model ZuluShooping.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Crear";
 }
 
-<h1>Create</h1>
+<h1>Crear</h1>
 
-<h4>Country</h4>
+<h4>País</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -18,15 +18,14 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Crear" class="btn btn-outline-primary" style="margin-top: 8px;" />
+                <a asp-action="Index" class="btn btn-outline-danger" style="margin-top: 8px;">Regresar</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
