--- a/ZuluShooping/ZuluShooping/Views/Countries/Details.cshtml
+++ b/ZuluShooping/ZuluShooping/Views/Countries/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model ZuluShooping.Data.Entities.Country
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Detalles";
 }
 
-<h1>Details</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div>
-    <h4>Country</h4>
+    <h4>de @Html.DisplayFor(model => model.Name)</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -19,6 +19,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-outline-warning">Editar</a>
+    <a asp-action="Index" class="btn btn-outline-danger">Regresar</a>
 </div>
