--- a/ZuluShooping/ZuluShooping/Views/Countries/Delete.cshtml
+++ b/ZuluShooping/ZuluShooping/Views/Countries/Delete.cshtml
@@ -17,6 +17,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.ProvincesNumber)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.ProvincesNumber)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
