--- a/ZuluShooping/ZuluShooping/Views/Countries/_CountryDetails.cshtml
+++ b/ZuluShooping/ZuluShooping/Views/Countries/_CountryDetails.cshtml
@@ -9,4 +9,10 @@
     <dd class="col-sm-10">
         @Html.DisplayFor(model => model.Name)
     </dd>
+    <dt class="col-sm-2">
+        @Html.DisplayNameFor(model => model.ProvincesNumber)
+    </dt>
+    <dd class="col-sm-10">
+        @Html.DisplayFor(model => model.ProvincesNumber)
+    </dd>
 </dl>
